# purescript.github.io

src/: .gitignore  Main.hs  build.sh  index.md  purescript-site.cabal
src/css/: _1-main.css
src/templates/: default.html
